<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dantesdoesthings.polyzvision.NavigationOptionsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="105dp">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:scaleType="center"
                android:background="@android:color/transparent"
                android:src="@drawable/left_arrow"
                android:id="@+id/nav_left_button"
                android:tag="@string/nav_left_tag"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="105dp">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:scaleType="center"
                android:background="@android:color/transparent"
                android:src="@drawable/up_arrow"
                android:id="@+id/nav_up_button"
                android:tag="@string/nav_up_tag"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:scaleType="center"
                android:background="@android:color/transparent"
                android:src="@drawable/down_arrow"
                android:id="@+id/nav_down_button"
                android:tag="@string/nav_down_tag"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="105dp">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:scaleType="center"
                android:background="@android:color/transparent"
                android:src="@drawable/right_arrow"
                android:id="@+id/nav_right_button"
                android:tag="@string/nav_right_tag"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="105dp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_alignParentTop="true"
                android:src="@drawable/zoom_in2"
                android:background="@android:color/transparent"
                android:id="@+id/nav_zoom_in_button"
                android:tag="@string/nav_zoom_in_tag"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:scaleType="center"
                android:background="@android:color/transparent"
                android:src="@drawable/zoom_out2"
                android:id="@+id/nav_zoom_out_button"
                android:tag="@string/nav_zoom_out_tag"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_memorize"
            android:id="@+id/nav_memorize_button"
            android:tag="@string/nav_memorize_tag"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_recall"
            android:id="@+id/nav_recall_button"
            android:tag="@string/nav_recall_tag"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_default"
            android:id="@+id/nav_default_button"
            android:tag="@string/nav_default_tag"/>

    </LinearLayout>

</LinearLayout>
