<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dantesdoesthings.polyzvision.SharpnessOptionsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_sharpness"
            android:layout_gravity="center"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/slider_sharpness"
            android:max="24"
            android:maxHeight="10dp"
            android:minHeight="10dp"
            android:progress="9"
            android:progressDrawable="@color/seekbar_bg"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:tag="@string/sharpness_slider_tag"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_smoothness_sharpness"
            android:layout_gravity="center"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/slider_smoothness_sharpness"
            android:max="60"
            android:maxHeight="10dp"
            android:minHeight="10dp"
            android:progress="20"
            android:progressDrawable="@color/seekbar_bg"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:tag="@string/smoothness_slider_tag"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_dominance_sharpness"
            android:layout_gravity="center"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/slider_dominance_sharpness"
            android:max="60"
            android:maxHeight="10dp"
            android:minHeight="10dp"
            android:progress="20"
            android:progressDrawable="@color/seekbar_bg"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:tag="@string/dominance_slider_tag"/>

    </LinearLayout>

</LinearLayout>
